<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/stepsProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_progress"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counts"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/counts"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Steps count"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="openGoals"
        android:text="Goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_progress"
        app:layout_constraintBottom_toTopOf="@+id/stepsProgressBar"
        app:layout_constraintStart_toStartOf="@+id/stepsProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/distanceProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/stepsProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/stepsProgressBar" />

    <ProgressBar
        android:id="@+id/caloriesProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/distanceProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/distanceProgressBar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_progress"
        app:layout_constraintBottom_toTopOf="@+id/distanceProgressBar"
        app:layout_constraintStart_toStartOf="@+id/distanceProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/stepsProgressBar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_progress"
        app:layout_constraintBottom_toTopOf="@+id/caloriesProgressBar"
        app:layout_constraintStart_toStartOf="@+id/caloriesProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/distanceProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>